feat: update application properties for PostgreSQL configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Backend_PB
+spring.datasource.url:jdbc:postgresql://ep-purple-sea-a4636ym2-pooler.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_NJ4igahDTl1L&sslmode=require
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
