fix: update PostgreSQL datasource URL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Backend_PB
-spring.datasource.url:jdbc:postgresql://ep-purple-sea-a4636ym2-pooler.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_NJ4igahDTl1L&sslmode=require
+spring.datasource.url:jdbc:postgresql://ep-dark-credit-achyyoko-pooler.sa-east-1.aws.neon.tech/games_api?user=games_api_owner&password=npg_1mrPczAHTd5f&sslmode=require
 
 
 spring.jpa.hibernate.ddl-auto=update
