fix: add server.max-http-request-header-size property to application configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Backend_PB
 spring.datasource.url:jdbc:postgresql://ep-dark-credit-achyyoko-pooler.sa-east-1.aws.neon.tech/games_api?user=games_api_owner&password=npg_1mrPczAHTd5f&sslmode=require
 
+server.max-http-request-header-size=10MB
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
